# GNR

./: .gitignore
PDF/: założenia projektu.tex
silnik/: CMakeLists.txt  algorytmGNR1.cpp  algorytmGNR1.h  dataReader.cpp  dataReader.h  dataWriter.cpp  dataWriter.h  generateDay.cpp  generateDay.h  main.cpp  models.h  supportFunctions.cpp  supportFunctions.h  timeLineBuilder.cpp  timeLineBuilder.h
